[gd_scene load_steps=2 format=3 uid="uid://cjbu5mxcqaic4"]

[ext_resource type="Script" uid="uid://c8644yb5t3qp2" path="res://scripts/menu/debug_menu.gd" id="1_euyyq"]

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_euyyq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
vertical = true

[node name="UnrestrictMovement" type="CheckButton" parent="MarginContainer/Panel/MarginContainer/BoxContainer"]
layout_mode = 2
text = "Unrestrict Moves"
alignment = 1

[node name="ClearPieces" type="Button" parent="MarginContainer/Panel/MarginContainer/BoxContainer"]
layout_mode = 2
theme_type_variation = &"SettingButtons"
text = "Clear All Pieces"

[node name="CapturePiece" type="Button" parent="MarginContainer/Panel/MarginContainer/BoxContainer"]
layout_mode = 2
theme_type_variation = &"SettingButtons"
text = "Capture Piece"
autowrap_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/Panel/MarginContainer/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Turn"

[node name="PlayerTurnOption" type="OptionButton" parent="MarginContainer/Panel/MarginContainer/BoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Player 1"
popup/item_0/id = 0
popup/item_1/text = "Player 2"
popup/item_1/id = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Panel/MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"InsetPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TabContainer" type="TabContainer" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="Piece" type="BoxContainer" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer"]
layout_mode = 2
vertical = true
metadata/_tab_index = 0

[node name="Info" type="BoxContainer" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece/Info"]
layout_mode = 2
text = "Selected Piece:"

[node name="PieceName" type="Label" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece/Info"]
unique_name_in_owner = true
layout_mode = 2

[node name="Config" type="BoxContainer" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece"]
layout_mode = 2
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece/Config"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece/Config/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player:"

[node name="PlayerOwnerOption" type="OptionButton" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece/Config/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Player 1"
popup/item_0/id = 0
popup/item_1/text = "Player 2"
popup/item_1/id = 1

[node name="HasMovedCheckbox" type="CheckBox" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece/Config"]
unique_name_in_owner = true
layout_mode = 2
text = "Has Moved"

[node name="Tile" type="BoxContainer" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer"]
visible = false
layout_mode = 2
vertical = true
metadata/_tab_index = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Tile"]
layout_mode = 2
text = "Selected Tile:"

[node name="PieceName" type="Label" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Tile"]
layout_mode = 2
text = "placeholder"

[node name="Label2" type="Label" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Tile"]
layout_mode = 2
text = "Occupant:"

[node name="PieceName2" type="Label" parent="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Tile"]
layout_mode = 2
text = "placeholder"

[connection signal="toggled" from="MarginContainer/Panel/MarginContainer/BoxContainer/UnrestrictMovement" to="." method="_on_unrestrict_movement_toggled"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/BoxContainer/ClearPieces" to="." method="_on_clear_pieces_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/BoxContainer/CapturePiece" to="." method="_on_capture_piece_pressed"]
[connection signal="item_selected" from="MarginContainer/Panel/MarginContainer/BoxContainer/BoxContainer/PlayerTurnOption" to="." method="_on_player_turn_option_item_selected"]
[connection signal="item_selected" from="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece/Config/BoxContainer/PlayerOwnerOption" to="." method="_on_player_owner_option_item_selected"]
[connection signal="toggled" from="MarginContainer/Panel/MarginContainer/BoxContainer/PanelContainer/MarginContainer/TabContainer/Piece/Config/HasMovedCheckbox" to="." method="_on_has_moved_checkbox_toggled"]
